<resources>
    <string name="app_name">MyCalculator</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">*</string>
    <string name="division">/</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="clear">C</string>
    <string name="equal">=</string>
    <string name="root">√</string>
    <string name="mod">%</string>
    <string name="a_power_b">a^b</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="ten_x">10^x</string>
    <string name="log">log</string>
    <string name="degree">Degree</string>
</resources>